7wordpressProgramgood/service.yaml
# app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: programgood-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: programgood-dep
